<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/astro_dark_background"
    android:fillViewport="true"
    android:overScrollMode="ifContentScrolls"
    tools:context=".navigation.ErrorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="370dp">

            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/bg_error_icon">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:importantForAccessibility="no"
                    android:scaleType="fitCenter"
                    android:src="@drawable/error_warning_circle" />
            </FrameLayout>

            <TextView
                android:id="@+id/text_email_error_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/montserrat_family"
                android:fontVariationSettings="'wght' 600"
                android:gravity="center"
                android:includeFontPadding="false"
                android:lineHeight="32sp"
                android:text="@string/email_generic_error_title"
                android:textColor="@color/astro_light_background"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_email_error_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/montserrat_family"
                android:gravity="center"
                android:includeFontPadding="false"
                android:lineHeight="24sp"
                android:text="@string/email_generic_error_body"
                android:textColor="@color/astro_input_hint"
                android:textSize="16sp" />

            <FrameLayout
                android:id="@+id/button_email_error_retry"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/bg_login_password_button"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/text_email_error_retry"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_family"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/email_error_retry"
                    android:textColor="@color/astro_light_background"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/progress_email_error_retry"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/astro_light_background"
                    android:visibility="gone" />
            </FrameLayout>

            <TextView
                android:id="@+id/button_email_error_start"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="38dp"
                android:background="@drawable/bg_flow_choice_secondary_button"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/montserrat_family"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/email_error_start"
                android:textColor="@color/astro_light_background"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
