...
        <action android:id="@+id/action_profile_to_change_password" app:destination="@id/changePasswordFragment"
            app:enterAnim="@anim/push_enter" app:exitAnim="@anim/push_exit"
            app:popEnterAnim="@anim/push_pop_enter" app:popExitAnim="@anim/push_pop_exit" />
        <action android:id="@+id/action_profile_to_flow_choice" app:destination="@id/flowChoiceFragment"
            app:enterAnim="@anim/push_enter" app:exitAnim="@anim/push_exit"
            app:popEnterAnim="@anim/push_pop_enter" app:popExitAnim="@anim/push_pop_exit" />
        <action android:id="@+id/action_profile_to_generic_error" app:destination="@id/genericErrorFragment"
            app:enterAnim="@anim/push_enter" app:exitAnim="@anim/push_exit"
            app:popEnterAnim="@anim/push_pop_enter" app:popExitAnim="@anim/push_pop_exit" />
    </fragment>
    <fragment android:id="@+id/changePasswordFragment"
        android:name="com.example.astro_mobile.shared.profile.ChangePasswordFragment" android:label="Alterar senha">
        <action android:id="@+id/action_change_password_to_sent" app:destination="@id/passwordSentFragment"
...
        android:name="com.example.astro_mobile.navigation.SplashFragment"
        android:label="Splash">
        <action android:id="@+id/action_splash_to_manager_home" app:destination="@id/managerHomeFragment"
            app:popUpTo="@id/splashFragment" app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_email_identification"
            app:destination="@id/emailIdentificationFragment"
            app:enterAnim="@anim/splash_dissolve_in"
            app:exitAnim="@anim/splash_dissolve_out"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_flow_choice"
...
            android:id="@+id/action_splash_to_employee_home"
            app:destination="@id/employeeHomeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_connection_error"
            app:destination="@id/connectionErrorFragment" />
        <action
            android:id="@+id/action_splash_to_first_login_password"
            app:destination="@id/firstLoginPasswordFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
...
