...
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_email_identification_input">

                <EditText
                    android:id="@+id/input_email_identification"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="emailAddress"
                    android:background="@null"
                    android:fontFamily="@font/montserrat_family"
                    android:gravity="center_vertical"
...
                android:text="@string/email_identification_error"
                android:textColor="@color/astro_error"
                android:textSize="14sp"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/button_email_identification_continue"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_access_key_button"
                android:clickable="true"
                android:focusable="true">
...
